--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@aws-sdk/client-s3": "^3.679.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
     "@clerk/nextjs": "^5.7.5",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-pdf-viewer/core": "^3.12.0",
@@ -24,17 +26,22 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "framer-motion": "^11.11.11",
+    "loader": "^2.1.1",
     "lucide-react": "^0.445.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "14.2.13",
     "pdfjs-dist": "^3.4.120",
+    "python-shell": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.10",
     "react-pdf": "^9.1.1",
+    "react-pdftotext": "^1.3.3",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
