--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.59.16",
     "@types/react-pdf": "^7.0.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
@@ -35,6 +36,8 @@
     "pdfjs-dist": "^3.4.120",
     "python-shell": "^3.0.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.10",
     "react-pdf": "^9.1.1",
